[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "r2dump-toolkit"
version = "1.2.1"
authors = [
    { name = "LuululaleW", email = "ramabkl650@gmail.com" },
]
description = "A toolkit to analyze and diff C++ symbols from .so files."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "colorlog>=6.7.0",
    "argcomplete>=3.0.0",
]

[project.scripts]
r2dump = "r2dump:main"

# =================================================================
# BAGIAN BARU UNTUK MEMPERBAIKI ERROR
# =================================================================
[tool.setuptools]
# Memberitahu setuptools untuk hanya menyertakan modul 'r2dump'
py-modules = ["r2dump"]
# =================================================================
